--- a/çalışma.ipynb
+++ b/çalışma.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BALSRETSIS\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1=\"SistersLab\"\n",
+    "revers_upper=lambda string : string.upper() [::-1]\n",
+    "print (revers_upper(str1))"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +27,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
