--- a/7- Liste Sıralama Algoritması.ipynb
+++ b/7- Liste Sıralama Algoritması.ipynb
@@ -4,38 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aklından Bir Sayı Tut Oyunu"
+    "Bir liste üzerinde sıralama algoritmasını kullanarak listeyi sıralayınız."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5, 100, 0, 15, 25, 49, 1]\n",
+      "Listenin sıralanmış hali:  [-5, 0, 1, 15, 25, 49, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ran = random.randint(1,100)\n",
-    "num = int(input(\"Bir tam sayı yazınız:\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while ran != num:\n",
-    "    num = int(input(\"Bir tam sayı yazınız:\"))\n",
+    "my_list = [-5, 100,0, 15, 25, 49, 1]\n",
     "\n",
-    "print(f\"Sayıyı doğru tahmin ettiniz! Sayı {num}\")  "
+    "print(my_list)\n",
+    "\n",
+    "for i in range(len(my_list)):\n",
+    "    for j in range(i + 1, len(my_list)):\n",
+    "\n",
+    "        if my_list[i] > my_list[j]:\n",
+    "            \n",
+    "            my_list[i], my_list[j] = my_list[j], my_list[i]\n",
+    "\n",
+    "print(\"Listenin sıralanmış hali: \", my_list)"
    ]
   }
  ],
