--- a/6- Eksik Sayıyı Bulma.ipynb
+++ b/6- Eksik Sayıyı Bulma.ipynb
@@ -4,21 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Veri Yapıları Çalışma Soruları\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "1) 0dan 100e kadar karışık sırada sayıları tutan bir listenizin olduğunu düşünün. Bu liste içerisinde bu defa n tane sayı yerine 1 adet sayı eksik. Eksik olan sayıyı bulunuz."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "2) Bir liste üzerinde sıralama algoritmasını kullanarak listeyi sıralayınız."
+    "import random\n",
+    "\n",
+    "my_list = [i for i in range (0,101)]\n",
+    "my_list.remove(random.randint(0,101))\n",
+    "random.shuffle(my_list)\n",
+    "\n",
+    "diff = (100*101) / 2 - sum(my_list)\n",
+    "\n",
+    "diff"
    ]
   },
   {
@@ -52,7 +66,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
